--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,7 @@ permalink: /gallery/
     {% for gallery in site.data.galleries.overview %}
     {% if count == 0 %}<div class="row">{% endif %}
       <div class="card">
-        <div class="card-title"> {{gallery.title}}</div>
+        <div class="card-title" style="margin-left: auto; margin-right: auto; display: flex;"><a>{{gallery.title}}</a></div>
         <div class="row">
 
         <a href="{{ site.url }}{{ site.baseurl }}/gallery/{{ gallery.directory }}.html">
